--- a/_scss/globals/_fonts.scss
+++ b/_scss/globals/_fonts.scss
@@ -172,7 +172,7 @@ button.btn {
 	color: #FFF;
 	border: 2px solid white;
 	border-radius: 30px;
-	font-size: 20px;
+	font-size: 18px;
 	padding-left: 60px;
 	padding-right: 60px;
 	font-weight: 400;
